# actix-basic-config

./: .env  Cargo.toml
src/: main.rs
src/config/: mod.rs
src/handler/: mod.rs
