[package]
name = "basic-config"
version = "0.1.0"
authors = ["Abdul Rachman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
config = "0.10.1"
dotenv = "0.15.0"
eyre = "0.6.5"
color-eyre = "0.5.10"
serde = { version = "1.0.123" , features = ["derive"] }
tracing = "0.1.23"
tracing-subscriber = "0.2.0"
tracing-futures = "0.2.4"
tracing-log = { version = "0.1.1" , features = ["env_logger"] }
